# get_car_info

./: .gitignore  README.md  pyproject.toml  requirements.txt
examples/: get_model.py
get_car_info/: __init__.py
get_car_info/api/: __init__.py  car_info.py  carinfo.py
get_car_info/base/: __init__.py  base.py
get_car_info/exceptions/: __init__.py  exceptions.py
get_car_info/models/: __init__.py  car.py  osago.py
src/: car_info.py  test.py
src/car_info/: __init__.py  car_info.py  models.py
tests/: example.py
