[project]
name = "get-car-info"
version = "1.0.1"
description = "Поиск информации по госномеру"
authors = [
    {name = "mayn3r",email = "mayneryt@bk.ru"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic (==2.10.6)",
    "requests (>=2.32.3,<3.0.0)",
    "lxml (>=5.3.0,<6.0.0)",
    "bs4 (>=0.0.2,<0.0.3)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
